[gd_scene load_steps=4 format=3 uid="uid://brrh1d3crocw6"]

[ext_resource type="PackedScene" uid="uid://cl65tp7eungkb" path="res://global/panels/info_panel.tscn" id="1_gau83"]
[ext_resource type="FontFile" uid="uid://c1mgwsb6wtd8q" path="res://fonts/shogunate/ShogunateCondensed-nRxWY.otf" id="2_c1mhg"]
[ext_resource type="Script" path="res://global/panels/ship_info_panel.gd" id="2_noau8"]

[node name="ShipInfoPanel" instance=ExtResource("1_gau83")]
script = ExtResource("2_noau8")

[node name="NameLabel" type="Label" parent="PanelContainer/GridContainer" index="0"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_c1mhg")
text = "Name:"

[node name="NameValueLabel" type="Label" parent="PanelContainer/GridContainer" index="1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_c1mhg")
text = "Name value"

[node name="BaseLabel" type="Label" parent="PanelContainer/GridContainer" index="2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_c1mhg")
text = "Base:"

[node name="BaseValueLabel" type="Label" parent="PanelContainer/GridContainer" index="3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_c1mhg")
text = "Base value"
